change index.html on card.html

--- a/card.html
+++ b/card.html
@@ -20,7 +20,7 @@
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" style="color:  hsl(228, 45%, 44%);"
 			target="_blank">Frontend
 			Mentor</a>.
-		Coded by <a href="">Bakyt Gaipov</a>.
+		Coded by <a href="https://github.com/Gaipov5791">Bakyt Gaipov</a>.
 	</div>
 
 </body>
