--- a/card.html
+++ b/card.html
@@ -16,11 +16,11 @@
 
 	<script src="js/script.js"></script>
 
-	<div class="attribution" style="color: hsl(0, 0%, 100%);">
+	<div class="attribution" style="color: hsl(0, 0%, 100%); margin-bottom: 20px;">
 		Challenge by <a href="https://www.frontendmentor.io?ref=challenge" style="color:  hsl(228, 45%, 44%);"
 			target="_blank">Frontend
 			Mentor</a>.
-		Coded by <a href="https://github.com/Gaipov5791">Bakyt Gaipov</a>.
+		Coded by <a href="https://github.com/Gaipov5791" target="_blank">Bakyt Gaipov</a>.
 	</div>
 
 </body>
